[project]
name = "llm-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.3",
    "openai>=1.76.0",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
]
